<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tjgaming.gpa_spartj3_calculator.MainActivity"
    android:id="@+id/calc_constraint_layout">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/class_layout_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_one"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/grade_one"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class_layout_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/class_layout_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_two"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/grade_two"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class_layout_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/class_layout_two"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_three"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/grade_three"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class_layout_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/class_layout_three"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_four"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/grade_four"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/class_layout_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/class_layout_four"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_five"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/grade_five"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button"
        app:layout_constraintTop_toBottomOf="@id/class_layout_five"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/gpa_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/calc_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa_label"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/gpa_field"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
